update file names

--- a/4-postgres-definition.yml
+++ b/4-postgres-definition.yml
@@ -1,18 +1,18 @@
 appVersion: v1
 kind: Pod
 metadata:
-  name: postgress-app
+  name: postgres-app
   labels:
-    app: postgress-app
+    app: postgres-app
     appType: voting-app
 spec:
   containers:
-    - name: postgress-app
-      image: postgress:9.4
+    - name: postgres-app
+      image: postgres:9.4
       ports:
         - containerPort: 5432
       env:
         - name: POSTGRES_USER
-          value: postgress
+          value: postgres
         - name: POSTGRES_PASSWORD
-          value: postgress
+          value: postgres
