--- a/4-postgres-definition.yml
+++ b/4-postgres-definition.yml
@@ -16,3 +16,8 @@ spec:
           value: postgres
         - name: POSTGRES_PASSWORD
           value: postgres
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
+      volumeMounts:
+        - name: db-data
+          mountPath: /var/lib/postgresql/data
