--- a/10-vote-ingress.yml
+++ b/10-vote-ingress.yml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: vote-ingress
   annotations:
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
