--- a/10-vote-ingress.yml
+++ b/10-vote-ingress.yml
@@ -5,14 +5,22 @@ metadata:
   annotations:
     ingressClassName: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /?(.*)
         pathType: Prefix
         backend:
           service:
             name: vote-service
+            port:
+              number: 80
+      - path: /result/?(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: result-service
             port:
               number: 80
