--- a/10-vote-ingress.yml
+++ b/10-vote-ingress.yml
@@ -11,14 +11,14 @@ spec:
   - http:
       paths:
       - path: /?(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: vote-service
             port:
               number: 80
       - path: /result/?(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: result-service
