--- a/10-vote-ingress.yml
+++ b/10-vote-ingress.yml
@@ -10,15 +10,15 @@ spec:
   rules:
   - http:
       paths:
-      - path: /?(.*)
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: vote-service
             port:
               number: 80
-      - path: /result/?(.*)
-        pathType: ImplementationSpecific
+      - path: /result
+        pathType: Prefix
         backend:
           service:
             name: result-service
