--- a/10-vote-ingress.yml
+++ b/10-vote-ingress.yml
@@ -10,14 +10,14 @@ spec:
   rules:
   - http:
       paths:
-      - path: /?(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: vote-service
             port:
               number: 80
-      - path: /result/?(.*)
+      - path: /result
         pathType: Prefix
         backend:
           service:
