--- a/10-vote-ingress.yml
+++ b/10-vote-ingress.yml
@@ -3,9 +3,11 @@ kind: Ingress
 metadata:
   name: vote-ingress
   annotations:
-    ingressClassName: 'nginx'
+    spec.ingressClassName: 'nginx'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/enable-access-log: 'true'
+    nginx.ingress.kubernetes.io/enable-rewrite-log: 'true'
 spec:
   rules:
   - http:
