--- a/11-ingress.yml
+++ b/11-ingress.yml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: vote-ingress
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   ingressClassName: 'nginx'
   rules:
