--- a/11-ingress.yml
+++ b/11-ingress.yml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: vote-ingress
   annotations:
+    ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   ingressClassName: 'nginx'
