--- a/11-ingress.yml
+++ b/11-ingress.yml
@@ -5,6 +5,7 @@ metadata:
   annotations:  
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
 spec:
   ingressClassName: 'nginx'
   rules:
