--- a/6-postgress-service.yml
+++ b/6-postgress-service.yml
@@ -10,6 +10,6 @@ spec:
   selector:
     appType: voting-app
   ports:
-    - name: http
+    - protocol: TCP
       port: 5432
       targetPort: 5432
