--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -14,13 +14,13 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: vote-service
+            name: vote
             port:
-              number: 80
+              number: 5000
       - path: /result
         pathType: Prefix
         backend:
           service:
-            name: result-service
+            name: result
             port:
-              number: 81
+              number: 5001
