--- a/v2/11-vote-ingress.yml
+++ b/v2/11-vote-ingress.yml
@@ -2,9 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: vote-ingress
-  namespace: vote
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  annotations:  
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
 spec:
   ingressClassName: 'nginx'
   rules:
@@ -17,8 +18,8 @@ spec:
             name: vote
             port:
               number: 5000
-      - path: /result
-        pathType: Prefix
+      - path: /result/?(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: result
