--- a/v2/11-vote-ingress.yml
+++ b/v2/11-vote-ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: vote-ingress
+  namespace: vote
   annotations:  
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: 'true'
