--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -4,12 +4,13 @@ metadata:
   name: vote-ingress
   namespace: vote
   annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: 'nginx'
   rules:
   - http:
       paths:
-      - path: /vote
+      - path: /vote/(.*)
         pathType: Prefix
         backend:
           service:
