--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -4,6 +4,7 @@ metadata:
   name: vote-ingress
   namespace: vote
   annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: 'nginx'
@@ -11,6 +12,7 @@ spec:
   - http:
       paths:
       - path: /vote/(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: vote
