--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -6,12 +6,14 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^(/dashboard)$ $1/ redirect;
 spec:
   ingressClassName: 'nginx'
   rules:
   - http:
       paths:
-      - path: /vote/(.*)
+      - path: /vote(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
           service:
