--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^(/vote)$ $1/ redirect;
+      rewrite ^(/)$ $1/ redirect;
 spec:
   ingressClassName: 'nginx'
   rules:
