--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -13,7 +13,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /dashboard(/|$)(.*)
+      - path: /vote(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
           service:
