--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: vote
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /vote/$1
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^(/vote)$ $1/ redirect;
 spec:
