--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -5,15 +5,13 @@ metadata:
   namespace: vote
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /vote/$1
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^(/vote)$ $1/ redirect;
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: 'nginx'
   rules:
   - http:
       paths:
-      - path: /vote(/|$)(.*)
+      - path: /vote/*
         pathType: ImplementationSpecific
         backend:
           service:
