--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -4,6 +4,8 @@ metadata:
   name: vote-ingress
   namespace: vote
   annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: 'nginx'
   rules:
