--- a/v2/10-vote-ingress.yml
+++ b/v2/10-vote-ingress.yml
@@ -3,16 +3,15 @@ kind: Ingress
 metadata:
   name: vote-ingress
   namespace: vote
-  annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
+  annotations:   
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: 'nginx'
   rules:
   - http:
       paths:
-      - path: /vote/*
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: vote
