--- a/v2/12-result-ingress.yml
+++ b/v2/12-result-ingress.yml
@@ -12,7 +12,7 @@ spec:
   - http:
       paths:
       - path: /result/?(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: result
