--- a/v2/12-result-ingress.yml
+++ b/v2/12-result-ingress.yml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^(/result)$ $1/ redirect;
+      rewrite ^(/result)$ $1/ permanent;
 spec:
   ingressClassName: 'nginx'
   rules:
