--- a/v2/12-result-ingress.yml
+++ b/v2/12-result-ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: result-ingress
   namespace: vote
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^(/result)$ $1/ permanent;
