--- a/v2/12-result-ingress.yml
+++ b/v2/12-result-ingress.yml
@@ -13,6 +13,13 @@ spec:
   rules:
   - http:
       paths:
+      - path: /?(.*)
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: result
+            port:
+              number: 5001
       - path: /result/?(.*)
         pathType: ImplementationSpecific
         backend:
