--- a/v2/result-deployment.yaml
+++ b/v2/result-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: result
     spec:
       containers:
-      - image: dockersamples/examplevotingapp_result:before
+      - image: saurabhd2106/result-app:1
         name: result
         ports:
         - containerPort: 80
