--- a/v3/10-vote-ingress.yml
+++ b/v3/10-vote-ingress.yml
@@ -7,10 +7,9 @@ metadata:
 spec:
   ingressClassName: 'nginx'
   rules:
-  - host: test.freevotingapp.com
-    http:
+  - http:
       paths:
-      - path: /
+      - path: /vote
         pathType: Prefix
         backend:
           service:
