--- a/v3/vote-service.yaml
+++ b/v3/vote-service.yaml
@@ -9,9 +9,9 @@ spec:
   type: NodePort
   ports:
   - name: "vote-service"
-    port: 5000
-    targetPort: 80
-    nodePort: 31000
+    port: 5000 # This is the port exposed by the container
+    targetPort: 80 # This is the port used by node to talk to container
+    nodePort: 31000 # This is the port exposed by the node -- Send your request here to verify
   selector:
     app: vote
   
